# mcserver-setup

./: .gitignore  Cargo.toml  README.md  TESTING.md  install.sh
.github/workflows/: ci.yml
src/: app.rs  config.rs  main.rs
src/install/: files.rs  mod.rs
src/ui/: mod.rs
