[package]
name = "mcserver-setup"
version = "0.1.0"
edition = "2021"
description = "A friendly cross-platform Minecraft server setup TUI"
license = "MIT"
repository = "https://github.com/REPLACE_WITH_YOUR_USERNAME/mcserver-setup"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
